KMoreTools: Update and fix desktopfiles

Summary:
BUG: 369646

Updates to KMoreTools:
- add minor code comments and update developer README
- update desktop files including fix for PartitionManager and KDiskFree
- add a script to easily update the desktop files
- add FSearch and AngrySearch to search tools
- add new grouping "screenrecorder" with Peek and Simples Screen Recorder
- add new grouping "mouse-tools"
- add new grouping "font-tools"
- add new grouping "language-dictionary"

The change is so big because of the update desktop files. The interface did not change.

Reviewers: ltoscano, elvisangelaccio, #kde_applications, davidedmundson, ngraham

Reviewed By: elvisangelaccio, ngraham

Subscribers: ngraham, ltoscano, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D7130